--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring:
+    datasource:
+        url:  jdbc:postgresql://servicestationdb.cyf0jl3cdjpo.eu-west-2.rds.amazonaws.com:5432/servicestationDB
+        username: postgres
+        password: postgres
