--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.security:spring-security-config'
     implementation 'org.springframework.security:spring-security-web'
-    //  implementation 'org.springframework.cloud:spring-cloud-starter-aws-jdbc'
+    //implementation 'org.springframework.cloud:spring-cloud-starter-aws-jdbc'
+
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.1.4.RELEASE'
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.1.4'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
+    compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
